# A-Maze-Ing

./: .gitignore  Makefile  README.md  a_maze_ing.py  config.txt  map.py  pyproject.toml  read_file.py  solver.py
mazegen/: __init__.py  conf.py  maze.py
src/: conf.py  maze_types.py  tui_render.py  types.py
src/config/: conf.py  config.txt
src/mazegen/: gen.py  maze.py
